--- a/proyectoFinalRelease/src/main/resources/static/index.html
+++ b/proyectoFinalRelease/src/main/resources/static/index.html
@@ -92,11 +92,10 @@
 <nav class="navbar navbar-inverse ">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
+            <a class="navbar-brand" href="#">WebSite</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a class="pointer" ng-click="relocate('main')">Main</a></li>
+            <li class="active"><a ng-click="relocate('main')">Home</a></li>
             <li><a class="pointer" ng-click="relocate('backlog')">Backlog</a></li>
             <li><a class="pointer" ng-click="relocate('activeSprint')">Active Sprint</a></li>
 
