Arreglo del Backlog

--- a/proyectoFinalRelease/src/main/resources/static/index.html
+++ b/proyectoFinalRelease/src/main/resources/static/index.html
@@ -71,6 +71,7 @@
     <script type="text/javascript" src="controllers/taskList.controller.js"></script>
     <script type="text/javascript" src="controllers/login.form.controller.js"></script>
     <script type="text/javascript" src="controllers/addTaskModal.controller.js"></script>
+    <script type="text/javascript" src="controllers/addToSprint.controller.js"></script>
 
     <script type="text/javascript" src="services/tasks.service.js"></script>
     <script type="text/javascript" src="services/taskList.service.js"></script>
