Agregado boton EditarTarea

--- a/proyectoFinalRelease/src/main/resources/static/index.html
+++ b/proyectoFinalRelease/src/main/resources/static/index.html
@@ -74,6 +74,7 @@
     <script type="text/javascript" src="controllers/addTaskListModal.controller.js"></script>
     <script type="text/javascript" src="controllers/addSprint.controller.js"></script>
     <script type="text/javascript" src="controllers/addTaskToSprintModal.controller.js"></script>
+    <script type="text/javascript" src="controllers/editTaskModal.controller.js"></script>
     <script type="text/javascript" src="services/tasks.service.js"></script>
     <script type="text/javascript" src="services/taskList.service.js"></script>
     <script type="text/javascript" src="services/core.service.js"></script>
