ordered lists, validation messages

--- a/proyectoFinalRelease/src/main/resources/static/index.html
+++ b/proyectoFinalRelease/src/main/resources/static/index.html
@@ -52,6 +52,8 @@
 <script src="bower_components/angular-ui-switch/angular-ui-switch.min.js"></script>
 <script src="bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
 
+<script src="bower_components/bootbox/bootbox.js"></script>
+
 
 
 
